kustomization/base/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman
  name: pacman
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: pacman
    spec:
      hostNetwork: true
      containers:
      - image: pacman:latest
        name: pacman
        ports:
        - containerPort: 8080
          name: http-server
