kustomization/base/pacman-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: pacman
spec:
  path: "/"
  to:
    kind: Service
    name: pacman
